<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_production">Translation of the Quran</string>
    <string name="app_name_stage">[Stage] Translation of the Quran</string>
    <string name="app_name_dev">[Dev] Translation of the Quran</string>
    <string name="change_resource">Change Resource</string>
    <string name="data_not_found">Data not found</string>
    <string name="choice_surah">Select Surah</string>
    <string name="change_surah">CHANGE SURAH</string>
    <string name="read">Read</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="info_and_terms_of_use">Info and Terms of Use</string>
    <string name="change">Index</string>
    <string name="surah_number">Surah Number: %1$d</string>
    <string name="surah_name">Surah Name: %1$s</string>
    <string name="verse_number">Verse Number: %1$d</string>
    <string name="meal_resource">Sources of Qur\'an</string>
    <string name="font_size">Font Size</string>
    <string name="app_language">Application Language</string>
    <string name="save">Save</string>
    <string name="versicle">%1$d. Verse</string>
    <string name="learn_iban">Learn Info of Bank</string>
    <string name="developed_by">Developed by Ramazan Öğünç</string>
    <string name="version">Version:1.2.0</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="info">Info</string>
    <string name="developer">Developer</string>
    <string name="send">Send</string>
    <string name="error_message_hint">Error Message</string>
    <string name="terms_of_use_description">Everyone who uses the application accepts the terms of use.\nThe developer is not responsible for all errors.\nQuran resources in the application are taken from ebook.kuran.biz.\nWe are not responsible for any translation errors.\nWe are not responsible for the misunderstanding of the Qur\'an during reading and for all religious behaviors and situations that may arise from this misunderstanding.\nThe person himself is responsible for this situation.</string>
    <string name="info_description">Meals are taken from ebook.kuran.biz.\n\nSome icons in the application are taken from \n• flaticon.com\n• svgrepo.com\n</string>
    <string name="developer_description"><b>Ramazan Öğünç</b>\n\nWebsite: <b>ramazanogunc.com</b> \nGithub: <b>ramazanogunc</b> \nTwitter: <b>oguncramazan</b> \nEmail: <b>ramazanogunc@hotmail.com</b></string>
    <string name="success">Success</string>
    <string name="success_message">Everything is OK</string>
    <string name="error">Error</string>
    <string name="error_message">Something went wrong</string>
    <string name="font_famiy">Font Family</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="please_select_read_surah">Select the surah you want to read</string>
    <string name="cancel">Cancel</string>
    <string name="font_preview">Font Preview</string>
    <string name="please_select_font">Choose the font you want to read</string>
    <string name="please_select_font_size">Choose font size</string>
    <string name="please_select_language">Select application language</string>
    <string name="please_select_app_theme">Select app theme</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="feedback_warning">Feedback cannot be empty</string>
    <string name="search">Search</string>
    <string name="no_verse">Cannot found verse</string>
    <string name="search_by_text">Search by text</string>
    <string name="search_by_select">Search by select</string>
    <string name="select_surah">Select Surah</string>
    <string name="select_verse">Select Verse</string>
    <string name="surah_name_title">Surah Name</string>
    <string name="select">Select</string>
    <string name="verse_number_title">Verse Number</string>
    <string name="jump_to_read_page">Jump to read page</string>
    <string name="verse">Verse</string>
    <string name="font">Font</string>
    <string name="general">General</string>

</resources>