<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/read">

    <fragment
        android:id="@+id/read"
        android:name="com.ramo.quran.ui.read_fragment.ReadFragment" />
    <fragment
        android:id="@+id/changeResource"
        android:name="com.ramo.quran.ui.change_resource_fragment.ChangeResourceFragment"
        android:label="@string/change_resource" />
    <fragment
        android:id="@+id/settings"
        android:name="com.ramo.quran.ui.settings_fragment.SettingFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/termsOfUse"
        android:name="com.ramo.quran.ui.terms_of_use_fragment.TermsOfUseFragment"
        android:label="@string/info_and_terms_of_use" />
    <fragment
        android:id="@+id/search"
        android:name="com.ramo.quran.ui.search_fragment.SearchFragment"
        android:label="@string/search">
        <action
            android:id="@+id/action_search_to_read"
            app:destination="@id/read"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph.xml"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>