<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="48dp"
    android:background="@drawable/bg_dialog_select"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_select_title"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/change_surah"
        android:textColor="@color/const_white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:text="@string/please_select_read_surah"
        android:textColor="@color/secondaryTextColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/secondaryColor"
        app:icon="@drawable/ic_warning"
        app:iconGravity="textStart"
        app:iconTint="@color/secondaryColor"
        app:strokeColor="@color/secondaryColor" />

</LinearLayout>