<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/settings_item_margin"
            android:text="@string/font_size"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="@dimen/settings_item_margin"
            android:entries="@array/fontSizeItems"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/settings_item_margin"
            android:text="@string/app_language"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="@dimen/settings_item_margin"
            android:spinnerMode="dialog" />

    </GridLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/settings_item_margin"
        android:background="@color/primaryColor"
        android:text="@string/save"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>